@@ -1,5 +1,14 @@
 2007-07-18  Oliver Hunt  <oliver@apple.com>
 
+        Rubber stamped by maciej
+
+        Rollout previous patch.
+
+        * page/EventHandler.cpp:
+        (WebCore::EventHandler::keyEvent):
+
+2007-07-18  Oliver Hunt  <oliver@apple.com>
+
         Reviewed by Kevin M.
 
         Fix for <rdar://problem/5346167> DOM key events triggered during
